--- a/views/diary/my-diary.hbs
+++ b/views/diary/my-diary.hbs
@@ -26,6 +26,7 @@
                 rows="4"
               ></textarea>
             </div>
+            <input type="hidden" name="_csrf" value="{{csrfToken}}" />
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
@@ -63,6 +64,7 @@
               <a href="/diary/update/{{id}}" class="btn btn-primary">Update</a>
 
               <form action="/diary/delete/{{id}}" method="POST" class="m-0">
+                <input type="hidden" name="_csrf" value="{{csrfToken}}" />
                 <button type="submit" class="btn btn-danger">Delete</button>
               </form>
             </div>
