--- a/views/diary/one-diary.hbs
+++ b/views/diary/one-diary.hbs
@@ -49,7 +49,7 @@
               rows="4"
             ></textarea>
           </div>
-
+          <input type="hidden" name="_csrf" value="{{csrfToken}}" />
           <button type="submit" class="btn btn-primary mt-3">Add</button>
         </form>
       </div>
