finish csrf token

--- a/views/user/update-profile.hbs
+++ b/views/user/update-profile.hbs
@@ -22,6 +22,7 @@
             value="{{user.name}}"
           />
         </div>
+        <input type="hidden" name="_csrf" value="{{csrfToken}}" />
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
     </div>
